# iMovie.uz-main

./: .env.example  .gitignore  App.tsx  Dockerfile  README.md  TODO.md  api.ts  docker-compose.yml  index.css  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  types.ts  vercel.json
backend/: auth.py  database.py  main.py  models.py  requirements.txt  schemas.py  test_sub.py  test_sub2.py  test_sub3.py
backend/routers/: auth_router.py  comments_router.py  movies_router.py  shorts_router.py  users_router.py
components/: Footer.tsx  HeroCarousel.tsx  LanguageSwitcher.tsx  MovieCard.tsx  Navbar.tsx
context/: AuthContext.tsx  LanguageContext.tsx  MovieContext.tsx  ThemeContext.tsx
data/: categories.ts  movies.ts  translations.ts
frontend/: netlify-env.d.ts
frontend/components/: GlassButton.tsx  HeroCarousel.tsx  LanguageSwitcher.tsx  MovieCard.tsx  Navbar.tsx
frontend/context/: AuthContext.tsx  LanguageContext.tsx  MovieContext.tsx  ThemeContext.tsx
frontend/pages/: Admin.tsx  Auth.tsx  Home.tsx  MovieDetails.tsx  Profile.tsx  Search.tsx  Shorts.tsx  Watch.module.css  Watch.tsx
pages/: Admin.tsx  Auth.tsx  Home.tsx  MovieDetails.tsx  Profile.tsx  Search.tsx  Shorts.tsx  Watch.tsx
photos/: true.jfif
public/photos/: agent.jfif  blood.jfif  bloodhounds.jfif
social-platform/: README.md
social-platform/backend/: .env.example  package.json
social-platform/backend/src/: app.js  server.js
social-platform/frontend/: index.html  package.json  tailwind.config.js
social-platform/frontend/src/: App.jsx  (+1 more)
utils/: movieImages.ts
(+48 files in other folders)
