[project]
name = "imovie-uz-main"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.0",
  "sqlalchemy==2.0.35",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.2.0",
  "python-multipart==0.0.12",
  "pydantic[email]==2.9.0",
]

[tool.vercel]
entrypoint = "backend.main:app"
